--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
             <div class="container">
                 <!-- Left Content -->
                 <div class="hero-content">
-                    <h1 style="text-align:left; color: #fff; font-size: 30px;">Our Products AI Digital Solutions</h1>
-                    <p>InnoAI Solutions – Emphasizing innovative AI solutions.</p>
+                   <h1 style="text-align: left; color: #fff; font-size: 30px; 
+                animation: slideDown 1s ease-out; animation-fill-mode: forwards;">
+        Our Products AI Digital Solutions
+    </h1>
+    <p style="animation: slideDown 1s ease-out 0.2s; animation-fill-mode: forwards;">
+        InnoAI Solutions – Emphasizing innovative AI solutions.
+    </p>
                     <!-- <h1 style="text-align:left;"><b style="color: #fff; font-size: 70px;">Startup</b></h1> -->
                     <!-- <a href="#" class="cta-button">Request For DEMO</a> -->
                 </div>
